testdata/baselines/reference/submodule/compiler/reverseMappedTypeRecursiveInference.errors.txt
reverseMappedTypeRecursiveInference.ts(14,7): error TS2322: Type '{}' is not assignable to type 'Bar<any>'.
  Index signature for type 'string' is missing in type '{}'.


==== reverseMappedTypeRecursiveInference.ts (1 errors) ====
    type Foo<V> = {
        [K in keyof V]: Foo<V[K]>;
    }
    
    type Bar<V> = {
        [K in keyof V]: V[K] extends object ? Bar<V[K]> : string;
    }
    
    function test<V>(value: Foo<V>): V {
      console.log(value);
      return undefined as any;
    }
    
    const bar: Bar<any> = {};
          ~~~
!!! error TS2322: Type '{}' is not assignable to type 'Bar<any>'.
!!! error TS2322:   Index signature for type 'string' is missing in type '{}'.
    
    test(bar);